Support: Break long support titles to prevent overflowing container.
Props jonoaldersonwp.
Fixes #5268.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9977 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_bbpress.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_bbpress.scss
@@ -638,6 +638,7 @@ $paginationBreakPoint: "600px";
 
 		&.page-title {
 			margin-top: 0;
+			word-break: break-word;
 		}
 	}
 
