--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/style-rtl.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/style-rtl.css
@@ -4033,6 +4033,7 @@ section {
 
 .bbpress h1.page-title {
 	margin-top: 0;
+	word-break: break-word;
 }
 
 .bbpress .forum-titles .bbp-topic-voice-count,
